@@ -8,41 +8,41 @@ author: davidortinau
 ms.author: daortin
 ms.date: 06/02/2018
 ms.openlocfilehash: 9c9b9f5a205a2eef7db9f27e8d09b10ce65a4318
-ms.sourcegitcommit: 2fbe4932a319af4ebc829f65eb1fb1816ba305d3
-ms.translationtype: MT
+ms.sourcegitcommit: 9ee02a2c091ccb4a728944c1854312ebd51ca05b
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/29/2019
+ms.lasthandoff: 03/10/2020
 ms.locfileid: "73027054"
 ---
 # <a name="adjusting-java-memory-parameters-for-the-android-designer"></a>Android Designer の Java メモリ パラメーターの調整
 
-Android designer の `java` プロセスを開始するときに使用される既定のメモリパラメーターは、一部のシステム構成と互換性がない場合があります。
+Android Designer 用に `java` プロセスを開始するときに使用される既定のメモリ パラメーターは、一部のシステム構成と互換性がない場合があります。
 
-Xamarin Studio 5.7.2.7 (以降、Visual Studio for Mac) および Xamarin 3.9.344 の Visual Studio Tools 以降では、これらの設定はプロジェクトごとにカスタマイズできます。
+Xamarin Studio 5.7.2.7 (以降、Visual Studio for Mac) および Xamarin 3.9.344 用の Visual Studio Tools 以降では、これらの設定をプロジェクトごとにカスタマイズできます。
 
-## <a name="new-android-designer-properties-and-corresponding-java-options"></a>新しい Android designer のプロパティと対応する Java オプション
+## <a name="new-android-designer-properties-and-corresponding-java-options"></a>Android Designer の新しいプロパティと対応する Java オプション
 
-次のプロパティ名は、指定された java[コマンドラインオプション](https://docs.oracle.com/javase/7/docs/technotes/tools/windows/java.html)に対応しています。
+次のプロパティ名は、指定されている Java [コマンドライン オプション](https://docs.oracle.com/javase/7/docs/technotes/tools/windows/java.html)に対応しています
 
 - **AndroidDesignerJavaRendererMinMemory** -Xms
 
-- **AndroidDesignerJavaRendererMaxMemory** -xmx
+- **AndroidDesignerJavaRendererMaxMemory** -Xmx
 
-- **AndroidDesignerJavaRendererPermSize** -XX: MaxPermSize
+- **AndroidDesignerJavaRendererPermSize** -XX:MaxPermSize
 
-# <a name="visual-studiotabwindows"></a>[Visual Studio](#tab/windows)
+# <a name="visual-studio"></a>[Visual Studio](#tab/windows)
 
 1. Visual Studio でソリューションを開きます。
 
-2. ソリューションエクスプローラーで各 Android プロジェクトを1つずつ選択し、各プロジェクトの [[すべてのファイルを](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2008/4afxey9h(v=vs.90))2 回表示] をクリックします。 `.axml` レイアウトファイルが含まれていないプロジェクトはスキップできます。 この手順では、各プロジェクトディレクトリに `.csproj.user` ファイルが含まれていることを確認します。
+2. ソリューション エクスプローラーで各 Android プロジェクトを 1 つずつ選択し、各プロジェクトで [[すべてのファイルの表示]](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2008/4afxey9h(v=vs.90)) を 2 回クリックします。 `.axml` レイアウト ファイルが含まれていないプロジェクトはスキップできます。 このステップにより、各プロジェクト ディレクトリに `.csproj.user` ファイルが含まれていることを確認します。
 
 3. Visual Studio を終了します。
 
-4. 手順 2. の各プロジェクトの `.csproj.user` ファイルを見つけます。
+4. ステップ 2 で各プロジェクトの `.csproj.user` ファイルを見つけます。
 
-5. 各 `.csproj.user` ファイルをテキストエディターで編集します。
+5. テキスト エディターで各 `.csproj.user` ファイルを編集します。
 
-6. `<PropertyGroup>` の要素内に新しい Android デザイナーのメモリプロパティを追加します。 既存の `<PropertyGroup>` を使用することも、新しいものを作成することもできます。 次の例では、3つの属性すべてが既定値に設定された `.csproj.user` ファイルの完全な例を示します。
+6. 新しい Android Designer のメモリ プロパティの一部または全部を、`<PropertyGroup>` 要素内に追加します。 既存の `<PropertyGroup>` を使用するか、新しく作成することができます。 3 つの属性すべてが既定値に設定された `.csproj.user` ファイルの完全な例を次に示します。
 
     ```xml
     <?xml version="1.0" encoding="utf-8"?>
@@ -58,29 +58,29 @@ Xamarin Studio 5.7.2.7 (以降、Visual Studio for Mac) および Xamarin 3.9.34
     </Project>
     ```
 
-7. 更新されたすべての `.csproj.user` ファイルを保存して閉じます。
+7. 更新したすべての `.csproj.user` ファイルを保存して閉じます。
 
 8. Visual Studio を再起動し、ソリューションを再度開きます。
 
-# <a name="visual-studio-for-mactabmacos"></a>[Visual Studio for Mac](#tab/macos)
+# <a name="visual-studio-for-mac"></a>[Visual Studio for Mac](#tab/macos)
 
-1. ソリューションを Visual Studio for Mac で開き、ソリューションディレクトリに `.userprefs` ファイルが含まれていることを確認します。
+1. ソリューションを Visual Studio for Mac で開き、ソリューション ディレクトリに `.userprefs` ファイルが含まれていることを確認します。
 
 2. Visual Studio for Mac を終了します。
 
-3. ソリューションディレクトリ内の `.userprefs` ファイルを見つけます。
+3. ソリューション ディレクトリで `.userprefs` ファイルを見つけます。
 
-4. テキストエディターで `.userprefs` ファイルを編集します。
+4. テキスト エディターで `.userprefs` ファイルを編集します。
 
-5. 次の形式で既存の XML 要素を見つけます。 この要素名の最後の部分は、プロジェクトの名前 (この例では "AndroidApplication1") と一致します。
+5. 次の形式の既存の XML 要素を見つけます。 この要素名の最後の部分は、プロジェクトの名前と一致します: この例では "AndroidApplication1"。
 
     ```xml
     <MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >
     ```
 
-6. `<MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >` 要素が存在しない場合は、それを囲む `<Properties>` 要素内の任意の場所に作成します。 必ず "AndroidApplication1" をプロジェクトの名前に置き換えてください。
+6. `<MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >` 要素が存在しない場合は、囲む `<Properties>` 要素内の任意の場所にそれを作成します。 必ず "AndroidApplication1" を自分のプロジェクトの名前に置き換えてください。
 
-7. 新しい Android デザイナーメモリプロパティのいずれかまたはすべてを、要素の属性として追加します。 次の例では、3つの属性すべてが既定値に設定された `.userprefs` ファイルの完全な例を示します。
+7. 新しい Android Designer のメモリ プロパティの一部または全部を、要素の属性として追加します。 3 つの属性すべてが既定値に設定された `.userprefs` ファイルの完全な例を次に示します。
 
     ```xml
     <Properties StartupItem="AndroidApplication1\AndroidApplication1.csproj">
@@ -94,7 +94,7 @@ Xamarin Studio 5.7.2.7 (以降、Visual Studio for Mac) および Xamarin 3.9.34
     </Properties>
     ```
 
-8. `.axml` レイアウトファイルが含まれているソリューション内の各 Android プロジェクトに対して、手順5-7 を繰り返します。 (つまり、プロジェクトごとに1つの `<MonoDevelop.Ide.ItemProperties.ProjectName>` 要素を追加します)。
+8. `.axml` レイアウト ファイルが含まれるソリューション内の各 Android プロジェクトに対し、ステップ 5 から 7 を繰り返します。 (つまり、各プロジェクトに 1 つの `<MonoDevelop.Ide.ItemProperties.ProjectName>` 要素を追加します)。
 
 9. `.userprefs` ファイルを保存して閉じます。
 
